# daka2

./: note
MyApplication2/app/: build.gradle
MyApplication2/app/src/main/: AndroidManifest.xml
MyApplication2/app/src/main/cpp/: CMakeLists.txt
MyApplication2/app/src/main/cpp/cmvspmvs/: CMakeLists.txt
MyApplication2/app/src/main/cpp/cmvspmvs/base/cmvs/: bundle.cc
MyApplication2/app/src/main/cpp/cmvspmvs/main/: CMakeLists.txt  cmvs.cc  genOption.cc  pmvs2.cc
MyApplication2/app/src/main/cpp/volume/: CMakeLists.txt
MyApplication2/app/src/main/cpp/volume/ply2obj/: CMakeLists.txt
MyApplication2/app/src/main/cpp/volume/ply2obj/src/: CMakeLists.txt  ply2obj.c  runply2obj.cpp  runply2obj.h
MyApplication2/app/src/main/cpp/volume/ssd/: CMakeLists.txt
MyApplication2/app/src/main/cpp/volume/ssd/dgp/: CMakeLists.txt  PlyWriter.hpp  PlyWriter.inl  PointReader.hpp  PointReader.inl  ply.c
MyApplication2/app/src/main/cpp/volume/ssd/octree/: CMakeLists.txt  HashOctree.inl  Morton.hpp  SmoothSignedDistance.inl
MyApplication2/app/src/main/cpp/volume/ssd/recon-ssd/: CMakeLists.txt  Settings.hpp  run_ssd.hpp  ssd_recon.cpp  test.cpp  test.h
MyApplication2/app/src/main/java/com/example/sunbaiwan9527/myapplication/: MainActivity.java  ObjectVolume.java  Reconstraction.java  RenderActivity.java
MyApplication2/app/src/main/res/layout/: activity_render.xml  content_render.xml
MyApplication2/app/src/main/res/values/: strings.xml
